color corrections added to light and dark modes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,13 @@
 :root {
-  --background-body-dark: #141D2F;
-  --background-card-dark: #1E2A47;
-  --text-primary-dark:#fff;
+  font-size: 16px;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  background-color: whitesmoke;
-  color: black;
-  font-family: "Space Mono", monospace;
-}
 body.dark {
   background-color: var(--background-body-dark);
   color: var(--text-primary-dark);
+}
+body.dark a {
+  color: #fff;
 }
 body.dark .container .top-banner .button-box #theme-btn #theme-label {
   color: #fff;
@@ -37,9 +28,33 @@ body.dark .container .card .card-right .numbers-container {
   background-color: var(--background-body-dark);
 }
 
+:root {
+  --background-body-dark: #141D2F;
+  --background-card-dark: #1E2A47;
+  --text-primary-dark:#fff;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #F6F8FF;
+  color: black;
+  font-family: "Space Mono", monospace;
+}
+
 .container {
   width: 50%;
   margin: 0 auto;
+}
+.container a {
+  text-decoration: none;
+  color: #000;
+}
+.container a:hover {
+  text-decoration: underline;
 }
 .container .top-banner {
   display: flex;
@@ -71,26 +86,36 @@ body.dark .container .card .card-right .numbers-container {
   display: none;
 }
 .container .search-container, .container .card {
-  background-color: orange;
+  background-color: #FEFEFE;
   margin: 10px 0;
 }
 .container .search-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-left: 32px;
 }
 .container .search-container input {
   height: 100%;
   padding: 0.5rem;
-  width: 80%;
+  width: 70%;
   font-family: "Space Mono", monospace;
+  background: none;
+  border: none;
+  color: #fff;
+  box-shadow: none;
+}
+.container .search-container input:focus {
+  border: none;
 }
 .container .search-container #search-btn {
   font-family: "Space Mono", monospace;
+  font-size: 16px;
+  box-sizing: border-box;
   background-color: #0079FF;
   border: none;
   border-radius: 10px;
-  padding: 0.5rem 1rem;
+  padding: 13px 24px;
   color: #fff;
 }
 .container .card {
@@ -122,7 +147,7 @@ body.dark .container .card .card-right .numbers-container {
 }
 .container .card .card-right .numbers-container {
   display: flex;
-  background-color: magenta;
+  background-color: #F6F8FF;
 }
 .container .card .card-right .numbers-container .number-item {
   flex: 1;
@@ -145,13 +170,6 @@ body.dark .container .card .card-right .numbers-container {
 }
 .container .card .card-right .contact-container .location-container.unavailable .error-message, .container .card .card-right .contact-container .twitter-container.unavailable .error-message, .container .card .card-right .contact-container .blog-container.unavailable .error-message, .container .card .card-right .contact-container .company-container.unavailable .error-message {
   display: inline;
-}
-a {
-  text-decoration: none;
-  color: #fff;
-}
-a:hover {
-  text-decoration: underline;
 }
 
 /*# sourceMappingURL=style.css.map */
